name:                haskml
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/kulshrax/haskml#readme
license:             MIT
license-file:        LICENSE
author:              Arun Kulshreshtha
maintainer:          kulshrax@gmail.com
copyright:           Copyright: (c) Arun Kulshreshtha
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Html
                     , ParseHtml
                     , RenderHtml
                     , Tags
                     , Attributes
                     , Combinator
                     , Selectors

  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , parsec
  default-language:    Haskell2010

executable haskml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskml
                     , text
  default-language:    Haskell2010

test-suite haskml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskml
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kulshrax/haskml
